// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Save image component with no save status should render 1`] = `
<React.Fragment>
  <div
    className="panel__save-image"
  >
    <Select
      choiceTransitionName="zoom"
      onChange={[Function]}
      prefixCls="ant-select"
      showSearch={false}
      transitionName="slide-up"
      value="svg"
    >
      <Option
        value="pdf"
      >
        PDF
      </Option>
      <Option
        value="png"
      >
        PNG
      </Option>
      <Option
        value="svg"
      >
        SVG
      </Option>
    </Select>
    <Button
      className="panel__save-button-image"
      disabled={false}
      onClick={[Function]}
      type="default"
    >
      <FontAwesomeIcon$1
        border={false}
        className=""
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              448,
              512,
              Array [],
              "f0c7",
              "M433.941 129.941l-83.882-83.882A48 48 0 0 0 316.118 32H48C21.49 32 0 53.49 0 80v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V163.882a48 48 0 0 0-14.059-33.941zM224 416c-35.346 0-64-28.654-64-64 0-35.346 28.654-64 64-64s64 28.654 64 64c0 35.346-28.654 64-64 64zm96-304.52V212c0 6.627-5.373 12-12 12H76c-6.627 0-12-5.373-12-12V108c0-6.627 5.373-12 12-12h228.52c3.183 0 6.235 1.264 8.485 3.515l3.48 3.48A11.996 11.996 0 0 1 320 111.48z",
            ],
            "iconName": "save",
            "prefix": "fas",
          }
        }
        listItem={false}
        mask={null}
        name=""
        pull={null}
        pulse={false}
        rotation={null}
        size={null}
        spin={false}
        symbol={false}
        transform={null}
      />
    </Button>
  </div>
</React.Fragment>
`;

exports[`Save image component with save status should render 1`] = `
<React.Fragment>
  <div
    className="panel__save-image"
  >
    <Select
      choiceTransitionName="zoom"
      onChange={[Function]}
      prefixCls="ant-select"
      showSearch={false}
      transitionName="slide-up"
      value="svg"
    >
      <Option
        value="pdf"
      >
        PDF
      </Option>
      <Option
        value="png"
      >
        PNG
      </Option>
      <Option
        value="svg"
      >
        SVG
      </Option>
    </Select>
    <Button
      className="panel__save-button-image"
      disabled={true}
      onClick={[Function]}
      type="default"
    >
      <FontAwesomeIcon$1
        border={false}
        className=""
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              512,
              512,
              Array [],
              "f110",
              "M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z",
            ],
            "iconName": "spinner",
            "prefix": "fas",
          }
        }
        listItem={false}
        mask={null}
        name=""
        pull={null}
        pulse={false}
        rotation={null}
        size={null}
        spin={true}
        symbol={false}
        transform={null}
      />
    </Button>
  </div>
  <div
    className="panel__save-notification"
  >
    Saving image...
  </div>
  <div
    className="panel__save-notification panel__save-warning"
  >
    <FontAwesomeIcon$1
      border={false}
      className=""
      fixedWidth={false}
      flip={null}
      icon={
        Object {
          "icon": Array [
            576,
            512,
            Array [],
            "f071",
            "M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z",
          ],
          "iconName": "exclamation-triangle",
          "prefix": "fas",
        }
      }
      listItem={false}
      mask={null}
      name=""
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={false}
      symbol={false}
      transform={null}
    />
    <div>
      There was an error saving the image...
    </div>
  </div>
</React.Fragment>
`;
